--- a/templates/register.html
+++ b/templates/register.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Register</title>
     <meta charset="UTF-8">
+    <title>Kayıt Ekranı</title>
 </head>
 <body>
-    <h2>Register</h2>
-    <form method="POST">
-        <label>Kullanıcı Adı:</label>
-        <input type="text" name="username" required><br><br>
-        <label>Şifre:</label>
-        <input type="password" name="password" required><br><br>
-        <button type="submit">Kayıt Ol</button>
+    <h2>Yeni Kullanıcı Kaydı</h2>
+    <form method="post">
+        İsim: <input type="text" name="name" required><br><br>
+        Soyisim: <input type="text" name="surname" required><br><br>
+        Mail: <input type="email" name="mail" required><br><br>
+        <button type="submit">Kaydet</button>
     </form>
+    <br>
+    <a href="/">← Ana sayfaya dön</a>
 </body>
 </html>
