--- a/templates/register.html
+++ b/templates/register.html
@@ -102,7 +102,7 @@
 
             <button type="submit">Kaydet</button>
         </form>
-        <a class="back-link" href="/">← Ana sayfay dön</a>
+        <a class="back-link" href="/">← Ana sayfaya dön</a>
     </div>
 </body>
 </html>
