--- a/templates/about.html
+++ b/templates/about.html
@@ -92,7 +92,7 @@
     <section class="page-header">
         <div class="container text-center">
             <h1 class="display-4 fw-bold mb-3">Hakkımda</h1>
-            <p class="lead">Ben kimim ve neler yapıyorum?</p>
+            <p class="lead">Ben kimim ve neler yapıyorumm?</p>
         </div>
     </section>
 
