--- a/templates/blog.html
+++ b/templates/blog.html
@@ -66,9 +66,6 @@
                         <a class="nav-link active" href="/blog">Blog</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/new-post">Yeni Yazı</a>
-                    </li>
-                    <li class="nav-item">
                         <a class="nav-link" href="/about">Hakkımda</a>
                     </li>
                     <li class="nav-item">
@@ -167,10 +164,7 @@
                         <div class="py-5">
                             <i class="fas fa-pen-fancy fa-4x text-muted mb-3"></i>
                             <h4>Henüz yazı yok</h4>
-                            <p class="text-muted">İlk blog yazınızı eklemek için aşağıdaki butona tıklayın.</p>
-                            <a href="/new-post" class="btn btn-primary btn-lg">
-                                <i class="fas fa-plus me-2"></i>İlk Yazımı Ekle
-                            </a>
+                            <p class="text-muted">Blog yazıları yakında eklenecek.</p>
                         </div>
                     </div>
                 </div>
@@ -191,7 +185,7 @@
                     <ul class="list-unstyled">
                         <li><a href="/" class="text-muted text-decoration-none">Ana Sayfa</a></li>
                         <li><a href="/blog" class="text-muted text-decoration-none">Blog</a></li>
-                        <li><a href="/new-post" class="text-muted text-decoration-none">Yeni Yazı</a></li>
+                        <li><a href="/about" class="text-muted text-decoration-none">Hakkımda</a></li>
                     </ul>
                 </div>
             </div>
