--- a/templates/admin_posts.html
+++ b/templates/admin_posts.html
@@ -190,7 +190,7 @@
             <hr class="my-4">
             <div class="row">
                 <div class="col-12 text-center">
-                    <p class="text-muted mb-0">&copy; 2024 Benim Blogum - Admin Paneli</p>
+                    <p class="text-muted mb-0">&copy; 2024 FlowBoard - Admin Paneli</p>
                 </div>
             </div>
         </div>
