--- a/templates/new_post.html
+++ b/templates/new_post.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Yeni Yazı Ekle - Benim Blogum</title>
+    <title>Yeni Yazı Ekle - FlowBoard</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <style>
@@ -43,7 +43,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
             <a class="navbar-brand" href="/">
-                <i class="fas fa-pen-fancy me-2"></i>Benim Blogum
+                <i class="fas fa-pen-fancy me-2"></i>FlowBoard
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
@@ -177,7 +177,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
-                    <h5><i class="fas fa-pen-fancy me-2"></i>Benim Blogum</h5>
+                    <h5><i class="fas fa-pen-fancy me-2"></i>FlowBoard</h5>
                     <p class="text-muted">Günlük düşüncelerimi ve deneyimlerimi paylaştığım kişisel blog sitem.</p>
                 </div>
                 <div class="col-md-6 text-md-end">
@@ -192,7 +192,7 @@
             <hr class="my-4">
             <div class="row">
                 <div class="col-12 text-center">
-                    <p class="text-muted mb-0">&copy; 2024 Benim Blogum. Tüm hakları saklıdır.</p>
+                    <p class="text-muted mb-0">&copy; 2024 FlowBoard. Tüm hakları saklıdır.</p>
                 </div>
             </div>
         </div>
