--- a/templates/about.html
+++ b/templates/about.html
@@ -75,9 +75,6 @@
                         <a class="nav-link" href="/blog">Blog</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/new-post">Yeni Yazı</a>
-                    </li>
-                    <li class="nav-item">
                         <a class="nav-link active" href="/about">Hakkımda</a>
                     </li>
                     <li class="nav-item">
@@ -101,7 +98,7 @@
         <div class="container">
             <div class="row align-items-center mb-5">
                 <div class="col-lg-4 text-center">
-                    <img src="https://via.placeholder.com/200x200/667eea/ffffff?text=Ben" alt="Profil Resmi" class="profile-image mb-4">
+                    <img src="/img/avatar.png" alt="Profil Resmi" class="profile-image mb-4">
                     <h3 class="fw-bold">Blog Yazarı</h3>
                     <p class="text-muted">Günlük düşüncelerimi paylaşıyorum</p>
                 </div>
