--- a/templates/admin_messages.html
+++ b/templates/admin_messages.html
@@ -166,7 +166,15 @@
                                         {{ message[5][:100] }}{% if message[5]|length > 100 %}...{% endif %}
                                     </div>
                                 </td>
-                                <td>{{ message[6] if message[6] is string else message[6].strftime('%d.%m.%Y %H:%M') if hasattr(message[6], 'strftime') else 'Tarih yok' }}</td>
+                                <td>
+                                    {% if message[6] is string %}
+                                        {{ message[6] }}
+                                    {% elif message[6] is defined and message[6] %}
+                                        {{ message[6].strftime('%d.%m.%Y %H:%M') }}
+                                    {% else %}
+                                        Tarih yok
+                                    {% endif %}
+                                </td>
                                 <td>
                                     {% if message[7] %}
                                         <span class="badge bg-success">Okundu</span>
@@ -211,7 +219,14 @@
                                                     <strong>Konu:</strong> {{ message[4] }}
                                                 </div>
                                                 <div class="col-md-6">
-                                                    <strong>Tarih:</strong> {{ message[6] if message[6] is string else message[6].strftime('%d.%m.%Y %H:%M') if hasattr(message[6], 'strftime') else 'Tarih yok' }}
+                                                    <strong>Tarih:</strong> 
+                                                    {% if message[6] is string %}
+                                                        {{ message[6] }}
+                                                    {% elif message[6] is defined and message[6] %}
+                                                        {{ message[6].strftime('%d.%m.%Y %H:%M') }}
+                                                    {% else %}
+                                                        Tarih yok
+                                                    {% endif %}
                                                 </div>
                                             </div>
                                             <div class="mb-3">
